feat: GET /dashboard
